# qrhandle-client

./: Cargo.toml  Dioxus.toml
public/: tailwind.css
src/: main.rs
src/components/: card.rs  headerfooter.rs  home.rs  pagenotfound.rs
